# coverage_test

./: .gitignore  CMakeLists.txt  appveyor.yml  coverage.sh  msys2_lcov.sh
cmake/: README.md  coverage.cmake  gtest.cmake  platform.cmake  qt5.cmake
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  libClass.cpp  libClassTest.h
test/: main.cpp
test/lib/: CMakeLists.txt  libClassTest.cpp
